More consolidating of tables, many fewer slides, each more informative

--- a/index.qmd
+++ b/index.qmd
@@ -88,7 +88,7 @@ format:
 -   Enable drawing tools - chalk **board** by pressing the B key (B to revert), notes **canvas** by pressing the C key (C to revert), press the Del key to erase, press the D key to **download drawings**
 :::
 
-```{r global_options, include=FALSE}
+```{r global_options, include=FALSE, cache=FALSE}
 ## Don't cache libraries or data
 library(np)
 library(bkcde)
@@ -780,7 +780,7 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
 ```
 
 
-## ML-CV Candidate Model Results for Beta DGP
+## Candidate Model Comparison:  Beta DGP
 
 -   We conduct Monte Carlo simulations are report the average relative RMSE of fixed polynomial estimators and the polynomial adaptive approach (PA).
 
@@ -789,7 +789,7 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
 -   If you knew *ex ante* which polynomial order to select, you would use that.
 
     ::: panel-tabset
-    ### Irrelevant
+    ### $B(1,2)$ ML
 
     ```{r}
     #| echo: false
@@ -802,30 +802,7 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
       column_spec(c(2,8), bold = T, color = "green")
     ```
 
-    ### Quadratic
-
-    ```{r}
-    #| echo: false
-    #| cache: false
-    #| label: tbl-dgp-beta-ml-quad
-    #| tbl-cap: Relative RMSE Quadratic
-    kable(rmse.beta.ml.quad,
-          col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
-      row_spec(4, bold = T, color = "lightgreen") %>%
-      column_spec(c(4,8), bold = T, color = "green")
-    ```
-    :::
-
-## LS-CV Candidate Model Results for Beta DGP
-
--   We conduct Monte Carlo simulations are report the average relative RMSE of fixed polynomial estimators and the polynomial adaptive approach (PA).
-
--   Numbers $<1$ are more efficient than the PA method.
-
--   If you knew *ex ante* which polynomial order to select, you would use that.
-
-    ::: panel-tabset
-    ### Irrelevant
+    ### $B(1,2)$ LS
 
     ```{r}
     #| echo: false
@@ -837,8 +814,21 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
       row_spec(4, bold = T, color = "lightgreen") %>%
       column_spec(c(2,8), bold = T, color = "green")
     ```
+    
+    ### $B(1+x^2,2-x^2)$ ML
 
-    ### Quadratic
+    ```{r}
+    #| echo: false
+    #| cache: false
+    #| label: tbl-dgp-beta-ml-quad
+    #| tbl-cap: Relative RMSE Quadratic
+    kable(rmse.beta.ml.quad,
+          col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
+      row_spec(4, bold = T, color = "lightgreen") %>%
+      column_spec(c(4,8), bold = T, color = "green")
+    ```
+
+    ### $B(1+x^2,2-x^2)$ LS
 
     ```{r}
     #| echo: false
@@ -852,7 +842,7 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
     ```
     :::
 
-## ML-CV Candidate Model Results for Gaussian DGP
+## Candidate Model Comparison:  Gaussian DGP
 
 -   We conduct Monte Carlo simulations are report the average relative RMSE of fixed polynomial estimators and the polynomial adaptive approach (PA).
 
@@ -861,7 +851,7 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
 -   If you knew *ex ante* which polynomial order to select, you would use that.
 
     ::: panel-tabset
-    ### Irrelevant
+    ### $N(0,1/12)$ ML
 
     ```{r}
     #| echo: false
@@ -874,30 +864,7 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
       column_spec(c(2,8), bold = T, color = "green")
     ```
 
-    ### Quadratic
-
-    ```{r}
-    #| echo: false
-    #| cache: false
-    #| label: tbl-dgp-norm-ml-quad
-    #| tbl-cap: Relative RMSE Quadratic
-    kable(rmse.norm.ml.quad,
-          col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
-      row_spec(4, bold = T, color = "lightgreen") %>%
-      column_spec(c(4,8), bold = T, color = "green")
-    ```
-    :::
-
-## LS-CV Candidate Model Results for Gaussian DGP
-
--   We conduct Monte Carlo simulations are report the average relative RMSE of fixed polynomial estimators and the polynomial adaptive approach (PA).
-
--   Numbers $<1$ are more efficient than the PA method.
-
--   If you knew *ex ante* which polynomial order to select, you would use that.
-
-    ::: panel-tabset
-    ### Irrelevant 
+    ### $N(0,1/12)$ LS
 
     ```{r}
     #| echo: false
@@ -910,7 +877,20 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
       column_spec(c(2,8), bold = T, color = "green")
     ```
 
-    ### Quadratic
+    ### $N(x^2,1/12)$ ML
+
+    ```{r}
+    #| echo: false
+    #| cache: false
+    #| label: tbl-dgp-norm-ml-quad
+    #| tbl-cap: Relative RMSE Quadratic
+    kable(rmse.norm.ml.quad,
+          col.names=c("n",paste("p=",0:p.max,.collapse=" ",sep=""),"PA"), digits=2,align='r') %>%
+      row_spec(4, bold = T, color = "lightgreen") %>%
+      column_spec(c(4,8), bold = T, color = "green")
+    ```
+    
+    ### $N(x^2,1/12)$ LS
 
     ```{r}
     #| echo: false
@@ -923,180 +903,195 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
       column_spec(c(4,8), bold = T, color = "green")
     ```
     :::
+    
+```{r}
+#| echo: false
+#| cache: false
+## HRL/FYT comparison
 
-## ML-CV Comparison with HRL and FYT for Beta DGP
+median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_200/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_200/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_400/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_400/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_800/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/beta/n_800/median_rmse_models.out",quiet=TRUE)))
+
+rmse.comp.beta.ml.irr <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2))
+
+median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_100/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_100/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_200/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_200/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_400/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_400/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_800/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/beta/n_800/median_rmse_models.out",quiet=TRUE)))
+
+rmse.comp.beta.ml.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2))
+
+
+median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_200/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_200/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_400/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_400/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_800/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/beta/n_800/median_rmse_models.out",quiet=TRUE)))
+
+rmse.comp.beta.ls.irr <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2))
+
+median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_100/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_100/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_200/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_200/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_400/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_400/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_800/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/beta/n_800/median_rmse_models.out",quiet=TRUE)))
+rmse.comp.beta.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2))
+
+
+median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_200/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_200/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_400/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_400/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_800/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvml/norm/n_800/median_rmse_models.out",quiet=TRUE)))
+
+rmse.comp.norm.ml.irr <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2))
+
+median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_100/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_100/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_200/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_200/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_400/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_400/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_800/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvml/norm/n_800/median_rmse_models.out",quiet=TRUE)))
+
+rmse.comp.norm.ml.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2))
+
+
+median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_200/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_200/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_400/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_400/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_800/n.dat",quiet=TRUE),
+                      scan("../work_irr_empirical_bounds/3D_cvls/norm/n_800/median_rmse_models.out",quiet=TRUE)))
+
+rmse.comp.norm.ls.irr <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2))
+
+median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_100/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_100/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_200/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_200/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_400/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_400/median_rmse_models.out",quiet=TRUE)),
+                    c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_800/n.dat",quiet=TRUE),
+                      scan("../work_quad_empirical_bounds/3D_cvls/norm/n_800/median_rmse_models.out",quiet=TRUE)))
+
+rmse.comp.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2))
+    
+```
+    
+## Comparison with HRL and FYT: Beta DGP
 
 -   We compare the performance of the proposed method using empirical bounds with the methods of @HALL_RACINE_LI:2004 and @fyt:1996, which use a classical kernel presuming infinite support (inappropriate for the Beta).
 
     ::: panel-tabset
-    ### Irrelevant
+    ### $B(1,2)$  ML
 
     ```{r}
     #| echo: false
     #| cache: false
     #| label: tbl-beta-cv-ml-irr
-    #| tbl-cap: Median Relative RMSE
-
-    median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_100/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_200/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_200/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_400/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_400/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/beta/n_800/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/beta/n_800/median_rmse_models.out",quiet=TRUE)))
-
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2)), col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')    
+    #| tbl-cap: Median Relative RMSE Irrelevant
+    kable(rmse.comp.beta.ml.irr, col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')    
     ```
-
-    ### Quadratic
-
-    ```{r}
-    #| echo: false
-    #| cache: false
-    #| label: tbl-beta-cv-ml-quad
-    #| tbl-cap: Median Relative RMSE
-    median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_100/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_100/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_200/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_200/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_400/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_400/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/beta/n_800/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/beta/n_800/median_rmse_models.out",quiet=TRUE)))
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2)), col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')
-    ```
-    :::
-
-## LS-CV Comparison with HRL and FYT for Beta DGP
-
--   We compare the performance of the proposed method using empirical bounds with the methods of @HALL_RACINE_LI:2004 and @fyt:1996, which use a classical kernel presuming infinite support (inappropriate for the Beta).
-
-    ::: panel-tabset
-    ### Irrelevant
+    
+    ### $B(1,2)$  LS
 
     ```{r}
     #| echo: false
     #| cache: false
     #| label: tbl-beta-cv-ls-irr
-    #| tbl-cap: Median Relative RMSE
+    #| tbl-cap: Median Relative RMSE Irrelevant
+    kable(rmse.comp.beta.ls.irr, col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')    
+    ```    
 
-    median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_100/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_200/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_200/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_400/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_400/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/beta/n_800/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/beta/n_800/median_rmse_models.out",quiet=TRUE)))
+    ### $B(1+x^2,2-x^2)$ ML
 
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2)), col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')    
+    ```{r}
+    #| echo: false
+    #| cache: false
+    #| label: tbl-beta-cv-ml-quad
+    #| tbl-cap: Median Relative RMSE Quadratic
+    kable(rmse.comp.beta.ml.quad, col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')
     ```
 
-    ### Quadratic
+    ### $B(1+x^2,2-x^2)$ LS
 
     ```{r}
     #| echo: false
     #| cache: false
     #| label: tbl-beta-cv-ls-quad
-    #| tbl-cap: Median Relative RMSE
-    median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_100/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_100/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_200/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_200/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_400/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_400/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/beta/n_800/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/beta/n_800/median_rmse_models.out",quiet=TRUE)))
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2)), col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')
+    #| tbl-cap: Median Relative RMSE Quadratic
+
+    kable(rmse.comp.beta.ls.quad, col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')
     ```
     :::
 
-## ML-CV Comparison with HRL and FYT for Gaussian DGP
+## Comparison with HRL and FYT: Gaussian DGP
 
 -   We compare the performance of the proposed method using empirical bounds with the methods of @HALL_RACINE_LI:2004 and @fyt:1996, which use a classical kernel presuming infinite support (appropriate for the Gaussian).
 
     ::: panel-tabset
-    ### Irrelevant
+    ### $N(0,1/12)$ ML
 
     ```{r}
     #| echo: false
     #| cache: false
     #| label: tbl-norm-cv-ml-irr
-    #| tbl-cap: Median Relative RMSE
-
-    median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_100/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_200/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_200/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_400/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_400/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvml/norm/n_800/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvml/norm/n_800/median_rmse_models.out",quiet=TRUE)))
-
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2)), col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')    
+    #| tbl-cap: Median Relative RMSE Irrelevant
+    kable(rmse.comp.norm.ml.irr, col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')    
     ```
-
-    ### Quadratic
-
-    ```{r}
-    #| echo: false
-    #| cache: false
-    #| label: tbl-norm-cv-ml-quad
-    #| tbl-cap: Median Relative RMSE
-    median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_100/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_100/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_200/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_200/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_400/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_400/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvml/norm/n_800/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvml/norm/n_800/median_rmse_models.out",quiet=TRUE)))
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2)), col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')
-    ```
-    :::
-
-## LS-CV Comparison with HRL and FYT for Gaussian DGP
-
--   We compare the performance of the proposed method using empirical bounds with the methods of @HALL_RACINE_LI:2004 and @fyt:1996, which use a classical kernel presuming infinite support (appropriate for the Gaussian).
-
-    ::: panel-tabset
-    ### Irrelevant
+    
+    ### $N(0,1/12)$ LS
 
     ```{r}
     #| echo: false
     #| cache: false
     #| label: tbl-norm-cv-ls-irr
-    #| tbl-cap: Median Relative RMSE
+    #| tbl-cap: Median Relative RMSE Irrelevant
+    kable(rmse.comp.norm.ls.irr, col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')    
+    ```    
 
-    median.dat <- rbind(c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_100/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_200/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_200/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_400/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_400/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_irr_empirical_bounds/3D_cvls/norm/n_800/n.dat",quiet=TRUE),
-                          scan("../work_irr_empirical_bounds/3D_cvls/norm/n_800/median_rmse_models.out",quiet=TRUE)))
+    ### $N(x^2,1/12)$ ML
 
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2)), col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')    
+    ```{r}
+    #| echo: false
+    #| cache: false
+    #| label: tbl-norm-cv-ml-quad
+    #| tbl-cap: Median Relative RMSE Quadratic
+    kable(rmse.comp.norm.ml.quad, col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')
     ```
 
-    ### Quadratic
+
+    ### $N(x^2,1/12)$ LS
 
     ```{r}
     #| echo: false
     #| cache: false
     #| label: tbl-norm-cv-ls-quad
-    #| tbl-cap: Median Relative RMSE
-    median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_100/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_100/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_200/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_200/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_400/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_400/median_rmse_models.out",quiet=TRUE)),
-                        c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_800/n.dat",quiet=TRUE),
-                          scan("../work_quad_empirical_bounds/3D_cvls/norm/n_800/median_rmse_models.out",quiet=TRUE)))
-    kable(cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2)), col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')
+    #| tbl-cap: Median Relative RMSE Quadratic
+    kable(rmse.comp.norm.ls.quad, col.names=c("n","BCPA","HLR","FYT"), digits=2,align='r')
     ```
     :::
 
